<resources>
    <string name="app_name">GripCalculator</string>
    <string name="third">Third</string>
    <string name="second">Second</string>
    <string name="first">First</string>
    <string name="left">LEFT</string>
    <string name="right">RIGHT</string>
    <string name="grip_calculator">Grip Calculator</string>
    <string name="_0">0</string>
    <string name="calculate">Calculate</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
</resources>